# trep_ros

./: CMakeLists.txt  README.md  package.xml
include/trep_ros/: trep_ros.h
src/: baxter.urdf.dave  trep_ros.cpp  trep_ros_main.cpp
